<resources>

    <!-- Label for overflow menu option that deletes all item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <string name="app_name">InventoryApp</string>

    <string name="empty_view_title_text">This list is empty</string>

    <!-- Subtitle text for the empty view that prompts the user to add an item -->
    <string name="empty_view_subtitle_text">Get started by adding an item</string>

    <string name="editor_activity_title_new_item">Add new item</string>

    <string name="editor_activity_title_edit_item">Edit item</string>

    <string name="category_overview">Overview</string>

    <string name="hint_item_name">Name</string>

    <string name="hint_item_quantity">Quantity</string>

    <string name="category_price">Price</string>

    <string name="hint_item_price">Price</string>

    <string name="currency">$</string>

    <string name="editor_insert_failed">Error with saving this item</string>

    <string name="editor_insert_successful">Success!</string>

    <string name="editor_update_failed"> Error updating item</string>

    <string name="editor_update_successful">Success</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="unsaved_changes_dialog_msg">unsaved changes</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep editing</string>

    <string name="delete_dialog_msg">Delete this file?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="editor_delete_failed">Delete failed</string>

    <string name="editor_delete_successful">Success!</string>

    <string name="sale">Sale</string>

    <string name="name_ls">Name: </string>

    <string name="quan_ls">Quantity: </string>

    <string name="price_ls">Price: </string>

    <string name="quantity">Quantity</string>

    <string name="plus">+</string>

    <string name="minus">-</string>

    <string name="select_image">Select image: </string>

    <string name="order_more">Order more</string>
</resources>
